--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   php:
-    container_name: papercut_php
+    container_name: licenseflow_php
     build:
       context: ./docker/php
     volumes:
@@ -11,7 +11,7 @@ services:
       - database
 
   nginx:
-    container_name: papercut_nginx
+    container_name: licenseflow_nginx
     image: nginx:stable-alpine
     ports:
       - "8080:80"
@@ -22,10 +22,10 @@ services:
       - php
 
   database:
-    container_name: papercut_db
+    container_name: licenseflow_db
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: papercut
+      POSTGRES_DB: licenseflow
       POSTGRES_USER: app
       POSTGRES_PASSWORD: app
     ports:
