feat: Initial project setup with Docker and Symfony configuration

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -13,4 +13,8 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
 
-RUN usermod -u 1000 www-data
+ARG UID=1000
+ARG GID=1000
+
+RUN usermod -u ${UID} www-data && \
+    groupmod -g ${GID} www-data
